[gd_scene load_steps=3 format=3 uid="uid://vs2j5t7leoj0"]

[ext_resource type="FontFile" uid="uid://b21yg3y2byt8f" path="res://assets/fonts/AvQest.ttf" id="1_jbx2m"]
[ext_resource type="Script" path="res://src/ui/endgame_ui.gd" id="1_wqgh1"]

[node name="EndgameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqgh1")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false

[node name="Win" type="ColorRect" parent="TabContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.521569)

[node name="Label" type="Label" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 384.0
offset_right = 314.0
offset_bottom = 533.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 120
text = "Victory"
horizontal_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 518.0
offset_right = 314.0
offset_bottom = 594.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 40
text = "The crusader is slain. 
Thus continues the reign of your unholy dominion."
horizontal_alignment = 1
uppercase = true

[node name="PlayButton" type="Button" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = 126.0
offset_right = -61.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 60
text = "Play again"

[node name="MenuButton" type="Button" parent="TabContainer/Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 62.0
offset_top = 126.0
offset_right = 365.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 60
text = "Main menu"

[node name="Lose" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.521569)

[node name="Label" type="Label" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 384.0
offset_right = 314.0
offset_bottom = 533.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 120
text = "Defeated"
horizontal_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 518.0
offset_right = 314.0
offset_bottom = 594.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 40
text = "The crusader has cleansed your realm.
Your power is diminished. 
Your wenches, none."
horizontal_alignment = 1
uppercase = true

[node name="PlayButton" type="Button" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = 156.0
offset_right = -61.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 60
text = "Play again"

[node name="MenuButton" type="Button" parent="TabContainer/Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 62.0
offset_top = 156.0
offset_right = 365.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_jbx2m")
theme_override_font_sizes/font_size = 60
text = "Main menu"

[connection signal="pressed" from="TabContainer/Win/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TabContainer/Win/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="TabContainer/Lose/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TabContainer/Lose/MenuButton" to="." method="_on_menu_button_pressed"]
